{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 18,
  "lineage": "531cc4a0-09fd-69d9-1668-f8287d77f53b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devopsshack_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454717754853:internet-gateway/igw-0eacd3d03bc78a541",
            "id": "igw-0eacd3d03bc78a541",
            "owner_id": "454717754853",
            "tags": {
              "Name": "devopsshack-igw"
            },
            "tags_all": {
              "Name": "devopsshack-igw"
            },
            "vpc_id": "vpc-073a279a19342424f"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devopsshack_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454717754853:route-table/rtb-0d0cb0219335d8fb3",
            "id": "rtb-0d0cb0219335d8fb3",
            "owner_id": "454717754853",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eacd3d03bc78a541",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devopsshack-route-table"
            },
            "tags_all": {
              "Name": "devopsshack-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-073a279a19342424f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c243f7dc25b1d45",
            "route_table_id": "rtb-0d0cb0219335d8fb3",
            "subnet_id": "subnet-0b569469b37e867c8"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da1e0b2684c3e75c",
            "route_table_id": "rtb-0d0cb0219335d8fb3",
            "subnet_id": "subnet-0502a4f99383b64a0"
          },
          "dependencies": [
            "aws_internet_gateway.devopsshack_igw",
            "aws_route_table.devopsshack_route_table",
            "aws_subnet.devopsshack_subnet",
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454717754853:security-group/sg-0e7dbb70f10d88c71",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7dbb70f10d88c71",
            "ingress": [],
            "name": "terraform-20241004184600217100000006",
            "name_prefix": "terraform-",
            "owner_id": "454717754853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-cluster-sg"
            },
            "tags_all": {
              "Name": "devopsshack-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-073a279a19342424f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devopsshack_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454717754853:security-group/sg-0cf4635ece0a820bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf4635ece0a820bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20241004184600215300000005",
            "name_prefix": "terraform-",
            "owner_id": "454717754853",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devopsshack-node-sg"
            },
            "tags_all": {
              "Name": "devopsshack-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-073a279a19342424f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devopsshack_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454717754853:subnet/subnet-0b569469b37e867c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b569469b37e867c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454717754853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsshack-subnet-0"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-0"
            },
            "vpc_id": "vpc-073a279a19342424f"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454717754853:subnet/subnet-0502a4f99383b64a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0502a4f99383b64a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454717754853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devopsshack-subnet-1"
            },
            "tags_all": {
              "Name": "devopsshack-subnet-1"
            },
            "vpc_id": "vpc-073a279a19342424f"
          },
          "dependencies": [
            "aws_vpc.devopsshack_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devopsshack_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454717754853:vpc/vpc-073a279a19342424f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-041e6002ddb9a005c",
            "default_route_table_id": "rtb-0cf6033d3211ac5b8",
            "default_security_group_id": "sg-012d216fc9f186638",
            "dhcp_options_id": "dopt-c5dceebf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073a279a19342424f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf6033d3211ac5b8",
            "owner_id": "454717754853",
            "tags": {
              "Name": "devopsshack-vpc"
            },
            "tags_all": {
              "Name": "devopsshack-vpc"
            }
          }
        }
      ]
    }
  ]
}